<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lab-Kotlin</string>
    <string name="stringEnter">Enter your Name and Surname</string>
    <string name="stringName">Name</string>
    <string name="stringSurname">Surname</string>
    <string name="stringApply">Apply</string>
    <string name="stringHello">Hello</string>
    <string name="stringNameError">Error: field "Name" is not filled</string>
    <string name="stringSurnameError">Error: field "Surname" is not filled</string>
    <string name="stringChangeFragment1">String Fragment</string>
    <string name="stringChangeFragment2">Number Fragment</string>
    <string name="stringFragmentNumber">This is a fragment for number</string>
    <string name="stringFragmentString">This is a fragment for string</string>
    <string name="enter_x">Enter x</string>
    <string name="x_plus_2">X + 2</string>
    <string name="x_minus_2">X - 2</string>
    <string name="x_times_2">X * 2</string>
    <string name="result_placeholder">Result is</string>
    <string name="set_the_result">Set the result?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="results">Results</string>
    <string name="link_hint">link</string>
    <string name="open_link_text">open link</string>
    <string name="open_browser_text">Open browser</string>
    <string name="open_service_management_text">Open service management</string>
    <string name="start_service_text">Start service</string>
    <string name="stop_service_text">Stop service</string>
    <string name="service_is_created">Service is created</string>
    <string name="service_is_running">Service is running</string>
    <string name="service_is_stopped">Service is stopped</string>
    <string name="open_settings">Open settings</string>
    <string name="highlight_text_in_red">Highlight text in red</string>
    <string name="save_changes">Save changes</string>
    <string name="clear_settings">Clear settings</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="open_animation">Open animation</string>
</resources>