<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StringFragment"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">


        <TextView
            android:id="@+id/stringEnter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:padding="5dp"
            android:text="@string/stringEnter"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/enterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/stringName"
                android:inputType="textPersonName"
                android:minWidth="48dp"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/enterSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/stringSurname"
                android:inputType="textPersonName"
                android:minWidth="48dp"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/buttonApply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stringApply"></Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/result_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp">

            </TextView>
        </LinearLayout>



</LinearLayout>
